Prevent titles of bottom panels (which use the .simple-toolbar-layout class) from overlapping the right-hand toolbar

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -57,6 +57,8 @@
 .simple-toolbar-layout.toolbar {
     .hbox;
     .box-align(center);
+    overflow: hidden;
+    
     .title-wrapper {
         /* This is necessary because text-overflow: ellipsis doesn't work when it's set
            directly on a flexing box in Chrome currently. */
